DDL coordinator handle write concern error incorrectly when removing coordinator document

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 5.0.6, 5.2.1
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • v5.2, v5.0
    • Sharding EMEA 2021-11-01, Sharding EMEA 2021-11-15, Sharding EMEA 2021-11-29, Sharding EMEA 2021-12-13, Sharding EMEA 2021-12-27, Sharding EMEA 2022-01-10, Sharding EMEA 2022-01-24
    • 17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a write concern error occurs when trying to remove the coordinator document the primary only service cleanup is not being executed, leaving the shard with a DDL coordinator service that will always return an error, even if the operation could be retried and the document could be removed successfully later on, this might be happening because it is not being considered that the _removeDocument function might throw.

      You can find a reproducible attached.

        1. bf_21905_reproducible.patch
          2 kB
          Marcos José Grillo Ramirez
        2. reproducible.js
          0.6 kB
          Marcos José Grillo Ramirez

            Assignee:
            Marcos José Grillo Ramirez
            Reporter:
            Marcos José Grillo Ramirez
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: