SERVER-58622 Retry removing the DDL coordinator document after the DDL is finished unless there is a stepdown

(cherry picked from commit 5fa70b4e4d6b4252fd505ab12cea771b197d2cf0)