src/mongo/db/s/sharding_ddl_coordinator_service.cpp
@@ -231,4 +231,10 @@ ShardingDDLCoordinatorService::getOrCreateInstance(OperationContext* opCtx, BSON
     return coordinator;
 }
 
+
+std::shared_ptr<executor::TaskExecutor> ShardingDDLCoordinatorService::getInstanceCleanupExecutor()
+    const {
+    return PrimaryOnlyService::getInstanceCleanupExecutor();
+}
+
 }  // namespace mongo
